# bevy-ball-game

./: Cargo.toml
src/: main.rs  systems.rs
src/game/: mod.rs  systems.rs
src/game/plugin_enemy/: mod.rs  resources.rs  systems.rs
src/game/plugin_gameloop/: mod.rs  systems.rs
src/game/plugin_hud/: components.rs  mod.rs  styles.rs
src/game/plugin_hud/systems/: layout.rs  mod.rs
src/game/plugin_player/: mod.rs  systems.rs
src/game/plugin_score/: mod.rs  systems.rs
src/game/plugin_star/: mod.rs  systems.rs
src/game_over_screen/: components.rs  mod.rs  styles.rs
src/game_over_screen/systems/: interactions.rs  layout.rs
src/main_menu/: mod.rs  styles.rs
src/main_menu/systems/: interactions.rs  layout.rs
src/pauze_screen/: components.rs  mod.rs  styles.rs
src/pauze_screen/systems/: interactions.rs  layout.rs
src/plugin_enemy/: mod.rs  systems.rs
src/plugin_gameloop/: mod.rs  systems.rs
src/plugin_player/: mod.rs  systems.rs
src/plugin_score/: systems.rs
src/plugin_star/: mod.rs  resources.rs  systems.rs
src/shared/: styles.rs
