[package]
name = "bevy-ball-game"
version = "0.1.0"
edition = "2021"

# Optimizations:
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
rand = "0.8.5"
